further formatting improvement

--- a/.github/workflows/score-resume.yaml
+++ b/.github/workflows/score-resume.yaml
@@ -52,8 +52,8 @@ jobs:
 
               core.summary
                 .addHeading('About The Candidate')
-                .addHeading(`Candidate Score ${response.candidate_score}`, 2)
-                .addHeading(`Career Growth Score ${response.career_growth_score}`, 2)
+                .addHeading(`Candidate Score: \`${response.candidate_score}\``, 2)
+                .addHeading(`Career Growth Score: \`${response.career_growth_score}\``, 2)
                 .addHeading('Candidate Explanation', 2)
                 .addRaw(response.candidate_explanation)
                 .addHeading('Candidate Deficiencies', 2)
@@ -63,7 +63,7 @@ jobs:
                 .addHeading('Candidate Recommendations', 2)
                 .addList(response.candidate_recommendations)
                 .addHeading('About The Job')
-                .addHeading(`Job Description Score ${response.job_description_score}`, 2)
+                .addHeading(`Job Description Score: \`${response.job_description_score}\``, 2)
                 .addHeading('Job Description Explanation', 2)
                 .addRaw(response.job_description_explanation)
                 .addHeading('Job Description Deficiencies', 2)
@@ -71,8 +71,7 @@ jobs:
                 .addHeading(`About ${response.job_company_name}`)
                 .addHeading('Job Company Description', 2)
                 .addRaw(response.job_company_description)
-                .addHeading('Job Company Sentiment', 2)
-                .addRaw(response.job_company_sentiment)
+                .addHeading(`Job Company Sentiment Score: \`${response.job_company_sentiment}\``, 2)
                 .addHeading('Job Company Explanation', 2)
                 .addRaw(response.job_company_explanation)
                 .write()
