Point out resume errors, improve variable name

--- a/.github/workflows/score-resume.yaml
+++ b/.github/workflows/score-resume.yaml
@@ -92,6 +92,8 @@ jobs:
                 .addList(response.candidate_strengths)
                 .addHeading('Candidate Recommendations', 2)
                 .addList(response.candidate_recommendations)
+                .addHeading('Resume Errors', 2)
+                .addList(response.candidate_errors)
                 .addHeading('About The Job')
                 .addHeading('Job Description Score:', 2)
                 .addRaw(response.job_description_score)
@@ -103,7 +105,7 @@ jobs:
                 .addHeading('Job Company Description', 2)
                 .addRaw(response.job_company_description)
                 .addHeading('Company Sentiment Score:', 2)
-                .addRaw(response.job_company_sentiment)
+                .addRaw(response.job_company_sentiment_score)
                 .addHeading('Company Sentiment Score Explanation', 2)
                 .addRaw(response.job_company_explanation)
                 .write()
