--- a/gemini-rewrite/action.yaml
+++ b/gemini-rewrite/action.yaml
@@ -98,7 +98,7 @@ runs:
               }
             ]
           };
-
+          console.log('ALASTAIR 1');
           const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/${process.env.GEMINI_MODEL}:generateContent?key=${process.env.GOOGLE_API_KEY}`, {
             method: 'POST',
             headers: {
@@ -106,10 +106,13 @@ runs:
             },
             body: JSON.stringify(payload)
           });
-
+          console.log('ALASTAIR 2');
           const data = await response.json();
+          console.log('ALASTAIR 3');
           let resultText = data.candidates[0].content.parts[0].text;
+          console.log('ALASTAIR 4');
           resultText = resultText.replace(/^```(html)?$/g, '').trim();
+          console.log('ALASTAIR 5');
 
           console.log('Gemini response:', resultText);
 
