--- a/gemini-rewrite/action.yaml
+++ b/gemini-rewrite/action.yaml
@@ -110,6 +110,7 @@ runs:
           const data = await response.json();
           console.log('ALASTAIR 3');
           let resultText = data.candidates[0].content.parts[0].text;
+          console.log(JSON.stringify(data, null, 2));
           console.log('ALASTAIR 4');
           resultText = resultText.replace(/^```(html)?$/g, '').trim();
           console.log('ALASTAIR 5');
