archive the resume

--- a/gemini-rewrite/action.yaml
+++ b/gemini-rewrite/action.yaml
@@ -74,8 +74,9 @@ runs:
                     - The resume should be tailored to the job description provided.
                     - You may reword the resume to make it more appealing but do NOT add any new, or misleading information.
                     - The resume should highlight the candidate's skills and experience that are relevant to the job description.
-                    - You may omit any sections or details that are not relevant to the job description.
                     - The resume should fit within a single page.
+                    - Any experience older than 10 years should be listed in a separate section at the end of the resume, unless the 10 year mark is witthin is within the middle of a position.
+                    - Any experience or skills that are not directly relevant to the job description should be de-emphasized.
                     - Include a header with the candidate's name and contact information.
                     - The resume should be styled using CSS to enhance its appearance.
                     - The resume should be formatted in a way that is easy to read and visually appealing.
