--- a/gemini-qualified/action.yaml
+++ b/gemini-qualified/action.yaml
@@ -110,10 +110,9 @@ runs:
           });
 
           const data = await response.json();
+          console.log('Gemini response:', JSON.stringify(data, null, 2));
           let resultText = data.candidates[0].content.parts[0].text;
-          resultText = resultText.replace(/```json|```/g, '').trim();
-
-          console.log('Gemini response:', resultText);
+          resultText = resultText.replace(/^```(json)?$/g, '').trim();
 
           core.setOutput('RAW', JSON.stringify(data, null, 2));
           core.setOutput('RESPONSE_TEXT', resultText);
