--- a/gemini-qualified/action.yaml
+++ b/gemini-qualified/action.yaml
@@ -112,7 +112,7 @@ runs:
           const data = await response.json();
           console.log('Gemini response:', JSON.stringify(data, null, 2));
           let resultText = data.candidates[0].content.parts[0].text;
-          resultText = resultText.replace(/^```(json)?$/g, '').trim();
+          resultText = resultText.replace(/```json|```/g, '').trim();
 
           core.setOutput('RAW', JSON.stringify(data, null, 2));
           core.setOutput('RESPONSE_TEXT', resultText);
