--- a/gemini-rewrite/action.yaml
+++ b/gemini-rewrite/action.yaml
@@ -116,7 +116,7 @@ runs:
           console.log(JSON.stringify(data, null, 2));
           let resultText = data.candidates[0].content.parts[0].text;
           console.log('ALASTAIR 4');
-          resultText = resultText.replace(/^```(html)?$/g, '').trim();
+          resultText = resultText.replace(/```html|```/g, '').trim();
           console.log('ALASTAIR 5');
 
           console.log('Gemini response:', resultText);
