More instruction improvements

--- a/gemini-rewrite/action.yaml
+++ b/gemini-rewrite/action.yaml
@@ -72,9 +72,10 @@ runs:
                     - You may reword the resume to make it more appealing but do NOT add any new, or misleading information.
                     - The resume should highlight the candidate's skills and experience that are relevant to the job description.
                     - The resume should fit within a single page.
-                    - Any experience older than 10 years must be included a separate section at the end of the resume and only list the company name, job title, and dates of employment.
+                    - Any experience older than 10 years must be included a separate section immedaitely after the section outlining the most recent experience and only list the company name, job title, and dates of employment.
                     - Any candidaate summary may be omitted or shortened to adhear to best practices when applying for a role within the employers industry.
                     - Any education section may be omitted when older than 5 years, or when it adhears to best practices when applying for a role within the employers industry.
+                    - The graduation date should be omitted from the education section.
                     - Any experience or skills that are not directly relevant to the job description should be de-emphasized.
                     - Include a minimal header with the candidate's name and contact information.
                     - The resume should be styled using CSS to enhance its appearance.
