--- a/.github/workflows/cut-release.yaml
+++ b/.github/workflows/cut-release.yaml
@@ -1,4 +1,3 @@
-# GitHub Action Workflow to update tags with new version number, update release notes, and create a new release
 name: Create New Version and Release
 
 on:
@@ -28,3 +27,8 @@ jobs:
 
       - name: Cut Release
         uses: softprops/action-gh-release@v2
+        with:
+          tag_name: ${{ steps.bump_version.outputs.new_tag }}
+          generate_release_notes: true
+          files: '*'  # TODO: Narrow scope to specific action directories
+
