--- a/scrape-sentiment/action.yaml
+++ b/scrape-sentiment/action.yaml
@@ -41,8 +41,8 @@ runs:
     - name: Set up xmllit
       shell: bash
       run: |
-        apt-get update
-        apt-get install -y libxml2-utils
+        sudo apt-get update
+        sudo apt-get install -y libxml2-utils
     - name: Scrape Reviews
       id: scrape-sentiment
       shell: bash
