supress errors, remove debugging

--- a/scrape-sentiment/action.yaml
+++ b/scrape-sentiment/action.yaml
@@ -64,8 +64,7 @@ runs:
           -H 'Sec-GPC: 1' \
           -H 'Priority: u=4' > reviews.html
 
-        echo REVIEWS=$(xmllint --html --recover --nowarning --format --xpath "//div[@data-testid='reviewsList']" reviews.html) >> $GITHUB_OUTPUT
-        xmllint --help
+        echo REVIEWS=$(xmllint --html --recover --nowarning --format --xpath "//div[@data-testid='reviewsList']" reviews.html 2>/dev/null) >> $GITHUB_OUTPUT
     - name: Output test
       shell: bash
       run: echo "${{ steps.scrape-sentiment.outputs.REVIEWS }}"
